examples/test/testpolicy6332.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6332
  namespace: namespace265
spec:
  podSelector:
    matchLabels:
      key49: value26
      key10: value20
      key23: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value28
          key5: value49
          key49: value32
      podSelector:
        matchLabels:
          key5: value44
          key13: value44
